--- a/AlphabetSoupCharity_Optimization.ipynb
+++ b/AlphabetSoupCharity_Optimization.ipynb
@@ -1,13 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Preprocessing"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -200,7 +193,7 @@
    "source": [
     "# Choose a cutoff value and create a list of classifications to be replaced\n",
     "# use the variable name `classifications_to_replace`\n",
-    "classifications_to_replace = list(application_df[\"CLASSIFICATION\"].value_counts()[application_df[\"CLASSIFICATION\"].value_counts() < 700].index)\n",
+    "classifications_to_replace = list(application_df[\"CLASSIFICATION\"].value_counts()[application_df[\"CLASSIFICATION\"].value_counts() < 1000].index)\n",
     "\n",
     "# Replace in dataframe\n",
     "for cls in classifications_to_replace:\n",
@@ -284,7 +277,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compile, Train and Evaluate the Model"
+    "## Optimization"
    ]
   },
   {
@@ -302,141 +295,20 @@
      ]
     }
    ],
-   "source": [
-    "# Define the model - deep neural net, i.e., the number of input features and hidden nodes for each layer.\n",
-    "num_input_features = len(X_train_scaled[0])\n",
-    "num_neurons_hl1 = 10\n",
-    "num_neurons_hl2 = 10\n",
-    "num_neurons_hl3 = 10\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "nn = tf.keras.models.Sequential()\n",
-    "\n",
-    "# First hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units = num_neurons_hl1, input_dim = num_input_features, activation = \"relu\"))\n",
-    "\n",
-    "# Second hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units = num_neurons_hl2, activation = \"relu\"))\n",
-    "\n",
-    "#Third hidden layer\n",
-    "nn.add(tf.keras.layers.Dense(units = num_neurons_hl3, activation = \"relu\"))\n",
-    "\n",
-    "# Output layer\n",
-    "nn.add(tf.keras.layers.Dense(units = 1, activation = \"sigmoid\"))\n",
-    "\n",
-    "# Check the structure of the model\n",
-    "nn.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'prompt_toolkit.formatted_text'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Compile the model\n",
-    "nn.compile(loss = 'binary_crossentropy', optimizer = 'adam', metrics=['accuracy'])\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'prompt_toolkit.formatted_text'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Train the model\n",
-    "fit_model = nn.fit(X_train_scaled, y_train, epochs = 50)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'prompt_toolkit.formatted_text'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Evaluate the model using the test data\n",
-    "model_loss, model_accuracy = nn.evaluate(X_test_scaled,y_test,verbose=2)\n",
-    "print(f\"Loss: {model_loss}, Accuracy: {model_accuracy}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe kernel failed to start due to the missing module 'prompt_toolkit.formatted_text'. Consider installing this module.\n",
-      "\u001b[1;31mClick <a href='https://aka.ms/kernelFailuresMissingModule'>here</a> for more info."
-     ]
-    }
-   ],
-   "source": [
-    "# Export our model to HDF5 file\n",
-    "\n",
-    "nn.save('AlphabetSoupCharity.h5')"
-   ]
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "orange3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.9.16"
-  },
-  "vscode": {
-   "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
-   }
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 2
 }
